--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>React App Setup</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+		<style>html, body, #root { height: 100%; padding: 0 }</style>
   </head>
   <body>
     <div id="root">
